--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Ashik Sanyo</title>    <!-- Change it your name  --> .
+    <title>Jino Mathew M.J</title>    <!-- Change it your name  --> .
   </head>
   <body class="light" id="top">
     <header class="header center">
@@ -69,13 +69,13 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Ashik Sanyo.</span></h1>
+        <h1>Hi, I am <span class="about__name">Jino Mathew M.J</span></h1>
         <h2 class="about__role">Aspiring DataScientist</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I'm a Tech geek living in Bangalore, India. I love to solve problems and build things. Also an Ex-TCSer and presently a Post grad Data Science student at Christ University!
+          I'm a Tech geek living in Bangalore, India. I love to solve problems and build things.Presently a Post grad Data Science student at Christ University!
         </p> <!-- about you -->
         <br>
-        <a href="mailto:ashiksanyo01@gmail.com">Mail: ashisanyo01@gmail.com </a><p> Contact: +91 63624 86106</p>  <!--Change it to your mail id and contact no-->
+        <a href="mailto:jinomathew2105@gmail.com">Mail: jinomathew2105gmail.com </a><p> Contact: +91 9844962549</p>  <!--Change it to your mail id and contact no-->
       </br>
       
 
