--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ growth in the corporate world.
               A Web application to sell medicine
             </p> <!--Project description-->
             <ul class="project__stack">
-              <li class="project__stack-item">Python</li>
-              <li class="project__stack-item">Excel</li>
-              <li class="project__stack-item">Plotly</li>
+              <li class="project__stack-item">Asp.net</li>
+              <li class="project__stack-item">Html</li>
+              <li class="project__stack-item">SQL Server Management Studio</li>
             </ul>
 
             
