--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@ growth in the corporate world.
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">HTML</li>                        <!--You can fill in the elective course and you can remove extras-->
           <li class="skills__list-item btn btn--plain">Java</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
+          <li class="skills__list-item btn btn--plain">Tableau</li>
           <li class="skills__list-item btn btn--plain">Python</li>
           <li class="skills__list-item btn btn--plain">Visual Studio</li>
           <li class="skills__list-item btn btn--plain">Power BI</li>
