--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
       <!-- About -->
       <div class="about center">
         <h1>Hi, I am <span class="about__name">Jino Mathew M.J</span></h1>
-        <h2 class="about__role">Aspiring DataScientist</h2>
+        <h2 class="about__role">Aspiring Software Developer</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I'm a Tech geek living in Bangalore, India. A responsible,creative thinker who takes initiatives and a
-hard worker with good communication skills who loves to
-learn new technologies.
+          I'm a Tech geek living in Bangalore, India.  A dedicated and meticulous intern with a strong background in data science and software development.
+ Possessing four months of hands-on experience in Full Stack Development, with a keen interest in continuous
+ learning and expertise in building responsive web applications. Enthusiastic about contributing to meaningful
+ projects and further advance in the field of Software Development
 Seeking a position which will utilize my skills,ability and
 hardwork in the field of software development that will be
 effective for the companies growth as well as my personal
@@ -86,7 +87,7 @@ growth in the corporate world.
       
 
         <div class="about__contact center">
-          <a href="https://drive.google.com/file/d/1ZdXz7c0nrMdD-BrkiJoLlzR-0GogPEb4/view?usp=sharing"_blank"  > <!-- drive link for resume-->
+          <a href="https://drive.google.com/file/d/15bWrS19EJzTzxaifpOKAfQ4cgInG0L9t/view?usp=drive_link"  > <!-- drive link for resume-->
             <span class="btn btn--outline">Resume</span> 
           </a>
 
