--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@ growth in the corporate world.
             <h3>Online Medical Store</h3> <!--Peoject Title -->
             <p class="project__description">
               A Web application to sell medicine
-            </p> <!--Project description-->
+            </p> 
+             <h3>Online Medical Store</h3> <!--Peoject Title -->
+            <p class="project__description">
+              A Web application to sell medicine
+            </p><!--Project description-->
             <ul class="project__stack">
               <li class="project__stack-item">Asp.net</li>
               <li class="project__stack-item">Html</li>
