--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ growth in the corporate world.
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>                        <!--You can fill in the elective course and you can remove extras-->
+          <li class="skills__list-item btn btn--plain">HTML/CSS</li>                        <!--You can fill in the elective course and you can remove extras-->
           <li class="skills__list-item btn btn--plain">Java</li>
           <li class="skills__list-item btn btn--plain">Tableau</li>
           <li class="skills__list-item btn btn--plain">Python</li>
